tests/errors/09_array_index_wrong_type.f
      PROGRAM ARRAY_INDEX_TYPE
      INTEGER A(3)
      REAL I
      I = 1.0
      PRINT *, A(I)
      END
